; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_hashmap.c_bucket_at.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_hashmap.c_bucket_at.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.hashmap_base_entry = type { i32 }
%struct.TYPE_5__ = type { i64 }

@hashmap_type_info = common dso_local global %struct.TYPE_6__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.hashmap_base_entry* (%struct.TYPE_5__*, i32)* @bucket_at to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.hashmap_base_entry* @bucket_at(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = call i64 @storage_ptr(%struct.TYPE_5__* %5)
  %7 = inttoptr i64 %6 to i32*
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** @hashmap_type_info, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = mul i32 %8, %15
  %17 = zext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %7, i64 %17
  %19 = bitcast i32* %18 to %struct.hashmap_base_entry*
  ret %struct.hashmap_base_entry* %19
}

declare dso_local i64 @storage_ptr(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
